[FIX] knowledge: always display hidden buttons on touch screens
In Knowledge, some buttons are hidden by default and becomes visible on
mouse hover. When the user uses a touch screen, the user will not be able
to see those buttons and interact with them.

This commit will add a new media query to ensure that the css rules hiding
the buttons become active only when the user has the hover capability.
The touch screen users will then be able to see and interact with all
buttons of Knowledge.

task-2867059

Part-of: odoo/enterprise#37065

--- a/knowledge/static/src/scss/knowledge_views.scss
+++ b/knowledge/static/src/scss/knowledge_views.scss
@@ -46,23 +46,10 @@
         max-width: 70vw;
     }
 
-    .o_knowledge_option_button {
-        visibility: hidden;
-        opacity: 0;
-        &:not(.o_knowledge_option_button_fake) {
-            transition: visibility 0.3s, opacity 0.3s linear;
-        }
-    }
-    
     .o_knowledge_icon_cover_buttons {
         background-color: var(--knowledge-view-bg, $o-white);
-    }
-
-    .o_knowledge_icon_cover_buttons:hover > a,
-    .o_knowledge_cover:hover .o_knowledge_edit_cover_buttons > a {
-        &:not(.o_knowledge_option_button_fake) {
-            visibility: visible;
-            opacity: 1;
+        .o_knowledge_option_button_fake {
+            opacity: 0;
         }
     }
 
@@ -208,13 +195,6 @@
             z-index: 0;
         }
 
-        .o_section_header:not(:hover) .o_section_create,
-        .o_article_handle > div:not(:hover) .o_article_create {
-            visibility: hidden;
-        }
-        .o_article_create, .o_article_caret {
-            border: none;
-        }
         .o_article_name a {
             color: inherit;
         }
@@ -389,11 +369,22 @@
         .o_knowledge_aside {
             width: 100%;
         }
-        .o_knowledge_option_button {
-            &:not(.o_knowledge_option_button_fake) {
-                visibility: visible;
-                opacity: 1;
-            }
+    }
+}
+
+@media (hover: hover) { // Devices supporting hover
+    .o_knowledge_form_view {
+        .o_knowledge_edit_cover_buttons,
+        .o_knowledge_icon_cover_buttons {
+            transition: opacity 0.3s ease-in-out;
+        }
+        .o_knowledge_cover:not(:hover) .o_knowledge_edit_cover_buttons,
+        .o_knowledge_icon_cover_buttons:not(:hover) {
+            opacity: 0;
+        }
+        .o_section_header:not(:hover) .o_section_create,
+        .o_article_handle:not(:hover) .o_article_create {
+            visibility: hidden;
         }
     }
 }
